Fixed image project image overflow

--- a/src/components/ImageOverlay/index.css
+++ b/src/components/ImageOverlay/index.css
@@ -6,10 +6,6 @@
   height: 100vh;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-
-  /* display: grid;
-  justify-content: center;
-  grid-template-columns: min(90%, 1200px); */
 }
 
 .image-overlay-container {
@@ -30,6 +26,9 @@
   margin-right: auto;
   width: 100%;
   max-width: 1200px;
-  /* border: 0px solid rgb(219, 219, 219); */
+  margin-top: 30px;
+  max-height: 90vh;
   border-radius: 20px;
+
+  object-fit: contain;
 }
